--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Welcome!</h1>
     <button onclick="numberSquared()">Click Here</button>
-    <script src="./javascript.js" charset="utf-8"></script>
+    <script src="./javascript.js"></script>
   </body>
   </html>
